# liminal

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  README.md.old
assets/shaders/native/: scene.frag  scene.vert
assets/shaders/retro/: blit.frag  blit.vert  dream.frag  dream.vert
cmake/: Dependencies.cmake  liminalConfig.cmake.in  pack_macos.cmake
editor/: CMakeLists.txt  agent_install.cpp  agent_install.hpp  edit_history.cpp  edit_history.hpp  editor_app.cpp  editor_app.hpp  lua_complete.cpp  lua_complete.hpp  main.cpp  mcp_server.cpp  mcp_server.hpp  recent_projects.cpp  recent_projects.hpp  resource_paths.hpp  script_editor.cpp  script_editor.hpp  terminal_panel.cpp  terminal_panel.hpp  theme.cpp  theme.hpp  update_check.cpp  update_check.hpp
editor/sample_project/: .mcp.json  project.ljson
editor/sample_project/.claude/skills/liminal-lua/: SKILL.md
editor/sample_project/scenes/: main.lscene  maze.lscene
editor/sample_project/scripts/: camera_move.lua  cube_chat.lua  hello_ai.lua  maze_player.lua  spin.lua  spin_center.lua
editor/sample_project/shaders/: rim.frag
editor/skills/liminal/: SKILL.md
editor/skills/liminal-lua/: SKILL.md
examples/: CMakeLists.txt
examples/01_window/: CMakeLists.txt  main.cpp
examples/02_retro_cube/: CMakeLists.txt  main.cpp
examples/03_scene_lua/: CMakeLists.txt  main.cpp
examples/03_scene_lua/scripts/: bob.lua  spin.lua
examples/04_wfc_town/: CMakeLists.txt  main.cpp
examples/04_wfc_town/assets/: house.json  tiles.json
examples/05_scene/: CMakeLists.txt  main.cpp
include/liminal/: liminal.hpp  version.hpp.in
include/liminal/audio/: audio.hpp
include/liminal/core/: app.hpp  asset_cache.hpp  assets.hpp  offscreen_context.hpp  pak.hpp  platform.hpp  pty.hpp  window.hpp
include/liminal/inference/: engine.hpp
include/liminal/procgen/: layout_validator.hpp  rng.hpp  shape_grammar.hpp  structure.hpp  terrain.hpp  tileset.hpp  types.hpp  wfc.hpp
include/liminal/render/: font8x8.hpp  mesh.hpp  renderer.hpp  shader.hpp  texture.hpp  types.hpp
include/liminal/scene/: component_registry.hpp  components.hpp  entity.hpp  raycast.hpp  scene.hpp  serialize.hpp
include/liminal/script/: script_host.hpp
include/liminal/ui/: imgui_layer.hpp
player/: CMakeLists.txt  main.cpp
src/: placeholder.cpp  version.cpp
src/audio/: audio.cpp
src/core/: app.cpp  asset_cache.cpp  assets.cpp  offscreen_context.cpp  pak.cpp  platform.cpp  pty.cpp  window.cpp
src/inference/: engine.cpp
src/procgen/: layout_validator.cpp  noise_detail.hpp  shape_grammar.cpp  structure.cpp  terrain.cpp  terrain_field.cpp  tileset.cpp  wfc.cpp
src/render/: embedded_shaders.hpp.in  hash_detail.hpp  mesh.cpp  renderer.cpp  shader.cpp  texture.cpp
src/scene/: component_registry.cpp  components.cpp  raycast.cpp  scene.cpp  serialize.cpp
src/script/: lua_bindings.cpp  lua_bindings.hpp  lua_bindings_procgen.cpp  script_host.cpp
src/ui/: imgui_layer.cpp
tests/: CMakeLists.txt  test_build_pak.cpp  test_lua_api.cpp  test_lua_procgen.cpp  test_pak_roundtrip.cpp  test_procgen_determinism.cpp  test_scene_roundtrip.cpp
